// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns expected CloudFormation stack for dev 1`] = `
{
  "Resources": {
    "kmskey49FBC3B3": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "Description": "serviceName",
        "EnableKeyRotation": true,
        "KeyPolicy": {
          "Statement": [
            {
              "Action": "kms:*",
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":root",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
            {
              "Action": [
                "kms:Create*",
                "kms:Describe*",
                "kms:Enable*",
                "kms:List*",
                "kms:Put*",
                "kms:Update*",
                "kms:Revoke*",
                "kms:Disable*",
                "kms:Get*",
                "kms:Delete*",
                "kms:TagResource",
                "kms:UntagResource",
                "kms:ScheduleKeyDeletion",
                "kms:CancelKeyDeletion",
              ],
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":root",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
            {
              "Action": [
                "kms:Encrypt",
                "kms:ReEncrypt*",
                "kms:GenerateDataKey*",
              ],
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":root",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
            {
              "Action": [
                "kms:Decrypt",
                "kms:GenerateDataKey",
              ],
              "Effect": "Allow",
              "Principal": {
                "Service": "sns.amazonaws.com",
              },
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::KMS::Key",
      "UpdateReplacePolicy": "Retain",
    },
    "kmskeyAlias39245779": {
      "Properties": {
        "AliasName": "alias/seek/self/serviceName",
        "TargetKeyId": {
          "Fn::GetAtt": [
            "kmskey49FBC3B3",
            "Arn",
          ],
        },
      },
      "Type": "AWS::KMS::Alias",
    },
    "topic69831491": {
      "Properties": {
        "KmsMasterKeyId": {
          "Fn::GetAtt": [
            "kmskey49FBC3B3",
            "Arn",
          ],
        },
        "TopicName": "serviceName",
      },
      "Type": "AWS::SNS::Topic",
    },
    "worker28EA3E30": {
      "DependsOn": [
        "workerServiceRoleDefaultPolicyBA498553",
        "workerServiceRole2130CC7F",
      ],
      "Properties": {
        "Architectures": [
          "arm64",
        ],
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.zip",
        },
        "Environment": {
          "Variables": {
            "NODE_ENV": "production",
            "NODE_OPTIONS": "--enable-source-maps",
            "SOMETHING": "dev",
          },
        },
        "FunctionName": "serviceName",
        "Handler": "app.handler",
        "KmsKeyArn": {
          "Fn::GetAtt": [
            "kmskey49FBC3B3",
            "Arn",
          ],
        },
        "Role": {
          "Fn::GetAtt": [
            "workerServiceRole2130CC7F",
            "Arn",
          ],
        },
        "Runtime": "nodejs18.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "workerServiceRole2130CC7F": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "workerServiceRoleDefaultPolicyBA498553": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "sqs:ReceiveMessage",
                "sqs:ChangeMessageVisibility",
                "sqs:GetQueueUrl",
                "sqs:DeleteMessage",
                "sqs:GetQueueAttributes",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "workerqueueA05CE5C6",
                  "Arn",
                ],
              },
            },
            {
              "Action": "kms:Decrypt",
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "kmskey49FBC3B3",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "workerServiceRoleDefaultPolicyBA498553",
        "Roles": [
          {
            "Ref": "workerServiceRole2130CC7F",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "workerSqsEventSourceappStackworkerqueue8281B9F47B9F582B": {
      "Properties": {
        "EventSourceArn": {
          "Fn::GetAtt": [
            "workerqueueA05CE5C6",
            "Arn",
          ],
        },
        "FunctionName": {
          "Ref": "worker28EA3E30",
        },
      },
      "Type": "AWS::Lambda::EventSourceMapping",
    },
    "workerqueueA05CE5C6": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "KmsMasterKeyId": {
          "Fn::GetAtt": [
            "kmskey49FBC3B3",
            "Arn",
          ],
        },
        "QueueName": "serviceName",
        "RedrivePolicy": {
          "deadLetterTargetArn": {
            "Fn::GetAtt": [
              "workerqueuedlq42262778",
              "Arn",
            ],
          },
          "maxReceiveCount": 3,
        },
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "workerqueuePolicy97054CB4": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "sqs:SendMessage",
              "Condition": {
                "ArnEquals": {
                  "aws:SourceArn": {
                    "Ref": "topic69831491",
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "sns.amazonaws.com",
              },
              "Resource": {
                "Fn::GetAtt": [
                  "workerqueueA05CE5C6",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Queues": [
          {
            "Ref": "workerqueueA05CE5C6",
          },
        ],
      },
      "Type": "AWS::SQS::QueuePolicy",
    },
    "workerqueueappStacktopic0CA45134AFB31FF4": {
      "DependsOn": [
        "workerqueuePolicy97054CB4",
      ],
      "Properties": {
        "Endpoint": {
          "Fn::GetAtt": [
            "workerqueueA05CE5C6",
            "Arn",
          ],
        },
        "Protocol": "sqs",
        "TopicArn": {
          "Ref": "topic69831491",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "workerqueuedlq42262778": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "KmsMasterKeyId": {
          "Fn::GetAtt": [
            "kmskey49FBC3B3",
            "Arn",
          ],
        },
        "QueueName": "serviceName-dlq",
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
  },
}
`;

exports[`returns expected CloudFormation stack for prod 1`] = `
{
  "Resources": {
    "kmskey49FBC3B3": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "Description": "serviceName",
        "EnableKeyRotation": true,
        "KeyPolicy": {
          "Statement": [
            {
              "Action": "kms:*",
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":root",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
            {
              "Action": [
                "kms:Create*",
                "kms:Describe*",
                "kms:Enable*",
                "kms:List*",
                "kms:Put*",
                "kms:Update*",
                "kms:Revoke*",
                "kms:Disable*",
                "kms:Get*",
                "kms:Delete*",
                "kms:TagResource",
                "kms:UntagResource",
                "kms:ScheduleKeyDeletion",
                "kms:CancelKeyDeletion",
              ],
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":root",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
            {
              "Action": [
                "kms:Encrypt",
                "kms:ReEncrypt*",
                "kms:GenerateDataKey*",
              ],
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":root",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
            {
              "Action": [
                "kms:Decrypt",
                "kms:GenerateDataKey",
              ],
              "Effect": "Allow",
              "Principal": {
                "Service": "sns.amazonaws.com",
              },
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::KMS::Key",
      "UpdateReplacePolicy": "Retain",
    },
    "kmskeyAlias39245779": {
      "Properties": {
        "AliasName": "alias/seek/self/serviceName",
        "TargetKeyId": {
          "Fn::GetAtt": [
            "kmskey49FBC3B3",
            "Arn",
          ],
        },
      },
      "Type": "AWS::KMS::Alias",
    },
    "topic69831491": {
      "Properties": {
        "KmsMasterKeyId": {
          "Fn::GetAtt": [
            "kmskey49FBC3B3",
            "Arn",
          ],
        },
        "TopicName": "serviceName",
      },
      "Type": "AWS::SNS::Topic",
    },
    "worker28EA3E30": {
      "DependsOn": [
        "workerServiceRoleDefaultPolicyBA498553",
        "workerServiceRole2130CC7F",
      ],
      "Properties": {
        "Architectures": [
          "arm64",
        ],
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.zip",
        },
        "Environment": {
          "Variables": {
            "NODE_ENV": "production",
            "NODE_OPTIONS": "--enable-source-maps",
            "SOMETHING": "prod",
          },
        },
        "FunctionName": "serviceName",
        "Handler": "app.handler",
        "KmsKeyArn": {
          "Fn::GetAtt": [
            "kmskey49FBC3B3",
            "Arn",
          ],
        },
        "Role": {
          "Fn::GetAtt": [
            "workerServiceRole2130CC7F",
            "Arn",
          ],
        },
        "Runtime": "nodejs18.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "workerServiceRole2130CC7F": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "workerServiceRoleDefaultPolicyBA498553": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "sqs:ReceiveMessage",
                "sqs:ChangeMessageVisibility",
                "sqs:GetQueueUrl",
                "sqs:DeleteMessage",
                "sqs:GetQueueAttributes",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "workerqueueA05CE5C6",
                  "Arn",
                ],
              },
            },
            {
              "Action": "kms:Decrypt",
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "kmskey49FBC3B3",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "workerServiceRoleDefaultPolicyBA498553",
        "Roles": [
          {
            "Ref": "workerServiceRole2130CC7F",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "workerSqsEventSourceappStackworkerqueue8281B9F47B9F582B": {
      "Properties": {
        "EventSourceArn": {
          "Fn::GetAtt": [
            "workerqueueA05CE5C6",
            "Arn",
          ],
        },
        "FunctionName": {
          "Ref": "worker28EA3E30",
        },
      },
      "Type": "AWS::Lambda::EventSourceMapping",
    },
    "workerqueueA05CE5C6": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "KmsMasterKeyId": {
          "Fn::GetAtt": [
            "kmskey49FBC3B3",
            "Arn",
          ],
        },
        "QueueName": "serviceName",
        "RedrivePolicy": {
          "deadLetterTargetArn": {
            "Fn::GetAtt": [
              "workerqueuedlq42262778",
              "Arn",
            ],
          },
          "maxReceiveCount": 3,
        },
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "workerqueuePolicy97054CB4": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "sqs:SendMessage",
              "Condition": {
                "ArnEquals": {
                  "aws:SourceArn": {
                    "Ref": "topic69831491",
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "sns.amazonaws.com",
              },
              "Resource": {
                "Fn::GetAtt": [
                  "workerqueueA05CE5C6",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Queues": [
          {
            "Ref": "workerqueueA05CE5C6",
          },
        ],
      },
      "Type": "AWS::SQS::QueuePolicy",
    },
    "workerqueueappStacktopic0CA45134AFB31FF4": {
      "DependsOn": [
        "workerqueuePolicy97054CB4",
      ],
      "Properties": {
        "Endpoint": {
          "Fn::GetAtt": [
            "workerqueueA05CE5C6",
            "Arn",
          ],
        },
        "Protocol": "sqs",
        "TopicArn": {
          "Ref": "topic69831491",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "workerqueuedlq42262778": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "KmsMasterKeyId": {
          "Fn::GetAtt": [
            "kmskey49FBC3B3",
            "Arn",
          ],
        },
        "QueueName": "serviceName-dlq",
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
  },
}
`;
